--- a/Vets/Vets/Views/Veterinarios/Index.cshtml
+++ b/Vets/Vets/Views/Veterinarios/Index.cshtml
@@ -4,16 +4,19 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Lista dos Veterinários da Clínica</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Adicionar Veterinário</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
+                @* HTML Helper
+                    mostra o 'Nome' do atributo
+                *@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NumCedulaProf)
@@ -25,23 +28,36 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NumCedulaProf)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fotografia)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model) {
+            @*  a palavra 'Model' é uma palavra reservada.
+                Representa o conjunto de dados recebidos dentro da View
+            *@
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                    @* HTML Helper
+                        Este mostra o conteúdo do atributo
+                    *@
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NumCedulaProf)
+                </td>
+                <td>
+                    @* @Html.DisplayFor(modelItem => item.Fotografia)  *@
+                    @*   mostra a fotografia, no ecrã *@
+                    <a href="~/Fotos/@item.Fotografia" target="_blank">
+                        <img src="~/Fotos/@Html.DisplayFor(modelItem => item.Fotografia)"
+                         alt="Foto do(a) veterinário(a) @item.Nome"
+                         title="@item.Nome"
+                         height="50" />
+                    </a>
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Remover</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
