--- a/Vets/Vets/Views/Veterinarios/Edit.cshtml
+++ b/Vets/Vets/Views/Veterinarios/Edit.cshtml
@@ -4,15 +4,25 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Editar</h1>
 
-<h4>Veterinarios</h4>
+<h4>Veterinários</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+
+        <form asp-action="Edit"
+              method="post"
+              enctype="multipart/form-data">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+           
+            @* estes objetos do tipo 'input' vão adicionar
+                efeito de 'memória' à nossa app
+            *@
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Fotografia" />
+            
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -25,8 +35,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Fotografia" class="control-label"></label>
-                <input asp-for="Fotografia" class="form-control" />
-                <span asp-validation-for="Fotografia" class="text-danger"></span>
+                @*
+                    <input asp-for="Fotografia" class="form-control" />
+                    <span asp-validation-for="Fotografia" class="text-danger"></span>
+                *@
+
+                   <input type="file" name="fotoVet" class="form-control" accept=".jpg,.png" />
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -40,5 +55,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
