--- a/Vets/Vets/Views/Consultas/Create.cshtml
+++ b/Vets/Vets/Views/Consultas/Create.cshtml
@@ -12,29 +12,43 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Data" class="control-label"></label>
                 <input asp-for="Data" class="form-control" />
                 <span asp-validation-for="Data" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Observacoes" class="control-label"></label>
-                <input asp-for="Observacoes" class="form-control" />
-                <span asp-validation-for="Observacoes" class="text-danger"></span>
+                <label asp-for="AuxValorConsulta" class="control-label"></label>
+                <input asp-for="AuxValorConsulta" class="form-control" />
+                <span asp-validation-for="AuxValorConsulta" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ValorConsulta" class="control-label"></label>
-                <input asp-for="ValorConsulta" class="form-control" />
-                <span asp-validation-for="ValorConsulta" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="AnimalFK" class="control-label"></label>
-                <select asp-for="AnimalFK" class ="form-control" asp-items="ViewBag.AnimalFK"></select>
+                <select asp-for="AnimalFK"
+                        class="form-control"
+                        asp-items="ViewBag.AnimalFK">
+                    <option value="">Selecione, por favor, um animal</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="VeterinarioFK" class="control-label"></label>
-                <select asp-for="VeterinarioFK" class ="form-control" asp-items="ViewBag.VeterinarioFK"></select>
+                <select asp-for="VeterinarioFK"
+                        class="form-control"
+                        asp-items="ViewBag.VeterinarioFK">
+                    <option value="">Selecione, por favor, um veterinário</option>
+                </select>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Observacoes" class="control-label"></label>
+                @*        <input asp-for="Observacoes" class="form-control" />    *@
+                <textarea asp-for="Observacoes" class="form-control" rows="5"></textarea>
+                <span asp-validation-for="Observacoes" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -47,5 +61,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
