--- a/Vets/Vets/Views/Consultas/Index.cshtml
+++ b/Vets/Vets/Views/Consultas/Index.cshtml
@@ -15,9 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Data)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Observacoes)
-            </th>
+            
             <th>
                 @Html.DisplayNameFor(model => model.ValorConsulta)
             </th>
@@ -36,17 +34,15 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Data)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Observacoes)
-            </td>
+            
             <td>
                 @Html.DisplayFor(modelItem => item.ValorConsulta)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Animal.Id)
+                @Html.DisplayFor(modelItem => item.Animal.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Veterinario.Id)
+                @Html.DisplayFor(modelItem => item.Veterinario.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
