--- a/Vets/Vets/Views/Shared/_Layout.cshtml
+++ b/Vets/Vets/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
-               @*  retira, da interface, os botões de 'register' e de 'login'
-                     <partial name="_LoginPartial" />   *@
+               @*  coloca, na interface, os botões de 'register' e de 'login'  *@
+                     <partial name="_LoginPartial" />   
                 </div>
             </div>
         </nav>
