adição da clausula [Authorize]

--- a/Vets/Vets/Views/Veterinarios/Index.cshtml
+++ b/Vets/Vets/Views/Veterinarios/Index.cshtml
@@ -6,9 +6,12 @@
 
 <h1>Lista dos Veterinários da Clínica</h1>
 
-<p>
-    <a asp-action="Create">Adicionar Veterinário</a>
-</p>
+@if (User.Identity.IsAuthenticated) {
+    <p>
+        <a asp-action="Create">Adicionar Veterinário</a>
+    </p>
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -53,9 +56,13 @@
                     </a>
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Remover</a>
+                    @if (User.Identity.IsAuthenticated) {
+                        <text>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                            <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Remover</a>
+                        </text>
+                    }
                 </td>
             </tr>
         }
