--- a/Vets/Vets/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Vets/Vets/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,20 +6,13 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Criar uma nova conta.</h2>
+<form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <h2>Criar uma nova conta.</h2>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="row">
+        <div class="col-md-4">
+
             <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @* novo atributo
-                vai recolher o nomde de batismo do utilizador
-            *@
-            <div class="form-floating">
-                <input asp-for="Input.NomeDoUtilizador" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.NomeDoUtilizador"></label>
-                <span asp-validation-for="Input.NomeDoUtilizador" class="text-danger"></span>
-            </div>
 
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
@@ -37,38 +30,31 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registar</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
+
+        </div>
+        <div class="col-md-4">
             <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0) {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                article
-                                about setting up this ASP.NET application to support logging in via external services
-                            </a>.
-                        </p>
-                    </div>
-                }
-                else {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins) {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+            @* dados do novo DONO *@
+
+            <div class="form-floating">
+                <input asp-for="Input.Dono.Nome" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Dono.Nome"></label>
+                <span asp-validation-for="Input.Dono.Nome" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Dono.NIF" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Dono.NIF"></label>
+                <span asp-validation-for="Input.Dono.NIF" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.Dono.Sexo" class="form-control" autocomplete="username" aria-required="true" />
+                <label asp-for="Input.Dono.Sexo"></label>
+                <span asp-validation-for="Input.Dono.Sexo" class="text-danger"></span>
+            </div>
+
+        </div>
     </div>
-</div>
+</form>
 
 @section Scripts {
 <partial name="_ValidationScriptsPartial" />
