--- a/Vets/Vets/Views/Veterinarios/Index.cshtml
+++ b/Vets/Vets/Views/Veterinarios/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Lista dos Veterinários da Clínica</h1>
 
-@if (User.Identity.IsAuthenticated) {
+@if (User.IsInRole("Veterinario")) {
     <p>
         <a asp-action="Create">Adicionar Veterinário</a>
     </p>
@@ -56,7 +56,7 @@
                     </a>
                 </td>
                 <td>
-                    @if (User.Identity.IsAuthenticated) {
+                    @if (User.IsInRole("Veterinario")) {
                         <text>
                             <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
                             <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
