--- a/Vets/Vets/Views/Animais/Index.cshtml
+++ b/Vets/Vets/Views/Animais/Index.cshtml
@@ -5,12 +5,16 @@
 }
 
 <h1>Lista de Animais</h1>
-<h4>@Model.FirstOrDefault().Dono.Nome</h4>
+@if (User.IsInRole("Cliente")) {
+    <h4>@Model.FirstOrDefault().Dono.Nome</h4>
+}
 
+@if (User.IsInRole("Veterinario") || User.IsInRole("Administrativo")) {
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -32,46 +36,52 @@
             <th>
                 @Html.DisplayNameFor(model => model.Fotografia)
             </th>
-            @*
-            <th>
-                @Html.DisplayNameFor(model => model.Dono)
-            </th>
-            *@
-            <th></th>
+            @if (User.IsInRole("Veterinario")) {
+                <th>
+                    @Html.DisplayNameFor(model => model.Dono)
+                </th>
+            }
+            @if (User.IsInRole("Veterinario") || User.IsInRole("Administrativo")) {
+                <th></th>
+            }
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Raca)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Especie)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataNascimento)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Peso)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fotografia)
-            </td>
-            @*
-            <td>
-                @Html.DisplayFor(modelItem => item.Dono.Nome)
-            </td>
-            *@
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Raca)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Especie)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataNascimento)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Peso)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Fotografia)
+                </td>
+                @if (User.IsInRole("Veterinario")) {
+                    <td>
+                        <a asp-controller="Donos" asp-action="Details" asp-route-id="@item.DonoFK">
+                            @Html.DisplayFor(modelItem => item.Dono.Nome)
+                        </a>
+                    </td>
+                }
+                @if (User.IsInRole("Veterinario") || User.IsInRole("Administrativo")) {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    </td>
+                }
+            </tr>
+        }
     </tbody>
 </table>
