--- a/Vets/Vets/Views/Donos/Details.cshtml
+++ b/Vets/Vets/Views/Donos/Details.cshtml
@@ -1,33 +1,58 @@
 ﻿@model Vets.Models.Donos
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h1>Details</h1>
+<h1>Detalhes do dono</h1>
 
 <div>
-    <h4>Donos</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NIF)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NIF)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Sexo)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sexo)
+        <dd class="col-sm-10">
+            @*   @Html.DisplayFor(model => model.Sexo)  *@
+            @(Model.Sexo.ToLower()=="f"?"Feminino":"Masculino")
         </dd>
+
+        <dt class="col-sm-2">Animais</dt>
+        <dd class="col-sm-10">
+            @* lista dos Animais associados ao Dono *@
+            <table class="table">
+                @foreach (var animal in Model.ListaAnimais ?? Enumerable.Empty<Animais>()) {
+                    <tr>
+                        <td>
+                            <a asp-action="Details" asp-controller="Animais"
+                               asp-route-id="@animal.Id"> <b>@animal.Nome</b> </a>
+                            <br />
+                            @animal.Especie - @animal.Raca <br />
+                            <img src="~/Fotos/Animais/@animal.Fotografia"
+                             alt="foto do @animal.Nome"
+                             height="100" />
+                        </td>
+                    </tr>
+                }
+            </table>
+
+        </dd>
+
+
     </dl>
 </div>
 <div>
